--- a/.github/workflows/Deploy_Surge.yml
+++ b/.github/workflows/Deploy_Surge.yml
@@ -33,4 +33,4 @@ jobs:
       run: npm install --global surge
     
     - name: Run Serge
-      run: surge ./ zeeshan25.surge.sh --token ${{secrets.SURGE_TOKEN}}
+      run: surge ./build zeeshan25.surge.sh --token ${{secrets.SURGE_TOKEN}}
