--- a/.github/workflows/Deploy_Surge.yml
+++ b/.github/workflows/Deploy_Surge.yml
@@ -14,13 +14,10 @@ jobs:
         uses: actions/setup-node@v2-beta
         with:
           node-version: 12
-      
-      - uses: borales/actions-yarn@v2.0.0
-        with:
-          cmd: install
+      - run: npm install
     
       - name: Build React App
-        run: yarn build
+        run: npm run build --if-present
     
       - name: Install Surge
         run: npm install -g surge
