--- a/.github/workflows/Deploy_Surge.yml
+++ b/.github/workflows/Deploy_Surge.yml
@@ -17,7 +17,7 @@ jobs:
       - run: npm install
     
       - name: Build React App
-        run: npm run build
+        run: CI=false npm run build
     
       - name: Install Surge
         run: npm install -g surge
