--- a/.github/workflows/Deploy_Surge.yml
+++ b/.github/workflows/Deploy_Surge.yml
@@ -22,4 +22,4 @@ jobs:
       - name: Install Surge
         run: npm install -g surge
       - name: Run surge
-        run: surge ./build zeeshan25.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+        run: surge ./build zeeshanraza.surge.sh --token ${{ secrets.SURGE_TOKEN }}
